# personal

./: .editorconfig  .gitattributes  .gitignore  README.md  docker-compose.dev.yml  overview.md
ai-assistant/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
ai-assistant/app/: main.py
ai-assistant/app/agents/: graph.py  state.py  supervisor.py
ai-assistant/app/agents/nodes/: after_sale.py  cart.py  chat.py  consult.py  executor.py  reflect.py
ai-assistant/app/api/: __init__.py  deps.py
ai-assistant/app/api/v1/: chat.py  health.py  tools.py
ai-assistant/app/core/: config.py  logging.py  security.py
ai-assistant/app/llm/: client.py
ai-assistant/app/llm/prompts/: supervisor.py  tag_generator.py
ai-assistant/app/memory/: long_term.py  short_term.py
ai-assistant/app/middleware/: error.py  trace.py
ai-assistant/app/rag/: retriever.py
ai-assistant/app/schemas/: chat.py
ai-assistant/app/services/: __init__.py  backend_client.py
ai-assistant/app/tools/: base.py  inventory.py  order.py  product_search.py  registry.py
ai-assistant/scripts/: init_db.sql  verify_glm.py
ai-assistant/tests/: __init__.py  conftest.py  test_reflect.py  test_registry.py
backend/: pom.xml
backend/sql/: init_chat.sql  init_ecommerce.sql
docs/: mysql-schema.sql
frontend/: .env.development  .env.production  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts
frontend/src/api/: http.ts
frontend/src/components/: AppHeader.vue  JIcon.vue
frontend/src/composables/: useTheme.ts
frontend/src/router/: guard.ts  index.ts
frontend/src/stores/: cart.ts  theme.ts  user.ts
frontend/src/types/: api.ts  components.d.ts
frontend/src/utils/: error.ts
frontend/src/views/: Cart.vue  Chat.vue  Home.vue  Login.vue  MerchantDashboard.vue  Orders.vue  (+3 more)
(+114 files in other folders)
