[project]
name = "ai-assistant"
version = "1.0.0"
description = "智能电商导购 AI 助手 - 基于 LangGraph 多 Agent 协同"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ecommerce AI Team" }
]
license = { text = "Internal" }

dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.19",
    "tenacity>=9.0.0",
    "redis>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiomysql>=0.2.0",
    "alembic>=1.14.0",
    "langgraph>=0.2.50",
    "langchain>=0.3.13",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.13",
    "pymilvus>=2.5.0",
    "openai>=1.58.0",
    "tiktoken>=0.8.0",
    "orjson>=3.10.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "httpx>=0.28.0",
    "respx>=0.21.0",
    "langgraph-cli>=0.0.30",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "C4", "PT", "RET", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"
